[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Art/Brain Joos Logo.PNG" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI Pages/AccountCreationPage/AccountCreationPage.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[node name="AccountCreationPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 59.0
margin_right = 719.0
margin_bottom = 775.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = 41.5
margin_right = 205.5
margin_bottom = 150.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BrainJoos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="."]
margin_left = 150.0
margin_top = 801.74
margin_right = 571.0
margin_bottom = 907.74
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "Email"
placeholder_alpha = 1.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="."]
margin_left = 150.0
margin_top = 979.0
margin_right = 571.0
margin_bottom = 1085.0
custom_fonts/font = SubResource( 2 )
align = 1
secret = true
placeholder_text = "Password"
placeholder_alpha = 1.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = 506.391
margin_right = 210.5
margin_bottom = 612.391
custom_fonts/font = SubResource( 3 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back button" type="Button" parent="."]
margin_left = 58.7855
margin_top = 87.8581
margin_right = 129.785
margin_bottom = 133.858
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = 238.055
margin_right = 225.5
margin_bottom = 377.055
text = "Message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
[connection signal="pressed" from="Back button" to="." method="_on_Back_button_pressed"]
